--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Simple Storage</title>
+	<title>PodCash</title>
 	<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.34/dist/web3.min.js"></script>
 	<script type="text/javascript">
-		const contract_address = "0x80aec1d099A6038Cd0169625A0C6e8c2e46b68a5";
+		const contract_address = "0x2219391b12fb841959d249564a9a45f34401be8ee86d9b50c02142c17f2da1d5";
 
 		const contract_abi = [
+	{
+		"inputs": [],
+		"stateMutability": "nonpayable",
+		"type": "constructor"
+	}
+			
 			{
 				"inputs": [],
-				"name": "get",
+				"name": "apoiar",
 				"outputs": [
 					{
 						"internalType": "uint256",
@@ -33,6 +39,21 @@
 				"stateMutability": "nonpayable",
 				"type": "function"
 			}
+			{
+		"inputs": [],
+		"name": "getSuaContribuicao",
+		"outputs": [
+			{
+				"internalType": "uint256",
+				"name": "",
+				"type": "uint256"
+			}
+		],
+		"stateMutability": "view",
+		"type": "function"
+	}
+		
+		
 		];
 
 		const ethEnabled = () => {
@@ -48,14 +69,15 @@
 		  window.coinbase = await window.web3.eth.getCoinbase();
 		};
 
-		async function getAndShowVal () {
-		  var val = window.SimpleStorage.methods.get().call();
-			document.getElementById("storedData").value = await val;
+		async function getAndShowApoio () {
+		  var val = window.contratoPodCash.methods.apoiar().call();
+			document.getElementById("setme").value = await val;
 		};
 
-		async function setVal () {
-			var val = document.getElementById("storedData").value;
-		  window.SimpleStorage.methods.set(val).send(val, {from:window.coinbase});
+		async function getShowContribuicao() {
+		var val = window.contratoPodCash.methods.getSuaContribuicao().call();
+			documente.getElementById
+		  window.contratoPodCash.methods.set(val).send(val, {from:window.coinbase});
 		}
 
 		if (!ethEnabled()) {
@@ -69,8 +91,10 @@
 	</script>
 </head>
 <body>
-	<button id="getme" onclick="getAndShowVal()">Get</button>
+	<button id="getme" onclick="getAndShowApoio()">Apoiar</button>
+	<br/>
 	StoredData: <input type="text" name="storedData" id="storedData">
-	<button id="setme" onclick="setVal()">Set</button>
+	<br/>
+	<button id="setme" onclick="setShowContribuicao()">Set</button>
 </body>
 </html>
