--- a/index.html
+++ b/index.html
@@ -11,21 +11,16 @@
 		"inputs": [],
 		"stateMutability": "nonpayable",
 		"type": "constructor"
-	}
+	},
+	{
+		"inputs": [],
+		"name": "apoiar",
+		"outputs": [],
+		"stateMutability": "payable",
+		"type": "function"
+	},
 			
-			{
-				"inputs": [],
-				"name": "apoiar",
-				"outputs": [
-					{
-						"internalType": "uint256",
-						"name": "",
-						"type": "uint256"
-					}
-				],
-				"stateMutability": "view",
-				"type": "function"
-			},
+
 			{
 				"inputs": [
 					{
@@ -64,6 +59,11 @@
 		  }
 		  return false;
 		}
+		
+		async function setApoiar () {
+                var val = document.getElementById("doar").value;
+        	window.contratoPodCash.methods.apoiar().send({from:window.coinbase, to: contract_address, value: val});
+		}
 
 		async function saveCoinbase () {
 		  window.coinbase = await window.web3.eth.getCoinbase();
@@ -71,7 +71,7 @@
 
 		async function getAndShowApoio () {
 		  var val = window.contratoPodCash.methods.apoiar().call();
-			document.getElementById("setme").value = await val;
+		  document.getElementById("setme").value = await val;
 		};
 
 		async function getShowContribuicao() {
@@ -91,10 +91,10 @@
 	</script>
 </head>
 <body>
-	<button id="getme" onclick="getAndShowApoio()">Apoiar</button>
+	<button id="getme" onclick="setApoiar()">Apoiar</button>
 	<br/>
-	StoredData: <input type="text" name="storedData" id="storedData">
+	Valor: <input type="text" name="apoiar" id="apoiar">
 	<br/>
-	<button id="setme" onclick="setShowContribuicao()">Set</button>
+	<button id="setme" onclick="getShowContribuicao()">Set</button>
 </body>
 </html>
