--- a/index.html
+++ b/index.html
@@ -7,20 +7,19 @@
 		const contract_address = "0x2219391b12fb841959d249564a9a45f34401be8ee86d9b50c02142c17f2da1d5";
 
 		const contract_abi = [
-	{
-		"inputs": [],
-		"stateMutability": "nonpayable",
-		"type": "constructor"
-	},
-	{
-		"inputs": [],
-		"name": "apoiar",
-		"outputs": [],
-		"stateMutability": "payable",
-		"type": "function"
-	},
-			
-
+			{
+				"inputs": [],
+				"name": "get",
+				"outputs": [
+					{
+						"internalType": "uint256",
+						"name": "",
+						"type": "uint256"
+					}
+				],
+				"stateMutability": "view",
+				"type": "function"
+			},
 			{
 				"inputs": [
 					{
@@ -33,22 +32,7 @@
 				"outputs": [],
 				"stateMutability": "nonpayable",
 				"type": "function"
-			},
-			{
-		"inputs": [],
-		"name": "getSuaContribuicao",
-		"outputs": [
-			{
-				"internalType": "uint256",
-				"name": "",
-				"type": "uint256"
 			}
-		],
-		"stateMutability": "view",
-		"type": "function"
-	}
-		
-		
 		];
 
 		const ethEnabled = () => {
@@ -59,24 +43,19 @@
 		  }
 		  return false;
 		}
-		
-		async function setApoiar () {
-                var val = document.getElementById("apoiar").value;
-        	window.contratoPodCash.methods.apoiar().send({from:window.coinbase, to: contract_address, value: val});
-		}
 
 		async function saveCoinbase () {
 		  window.coinbase = await window.web3.eth.getCoinbase();
 		};
 
-		async function getAndShowApoio () {
-		  var val = window.contratoPodCash.methods.apoiar().call();
-		  document.getElementById("setme").value = await val;
+		async function getAndShowVal () {
+		  var val = window.contratoPodCash.methods.get().call();
+			document.getElementById("storedData").value = await val;
 		};
 
-		async function getShowContribuicao() {
-		var val = window.contratoPodCash.methods.getSuaContribuicao().call();
-		  
+		async function setVal () {
+			var val = document.getElementById("storedData").value;
+		  window.contratoPodCash.methods.set(val).send(val, {from:window.coinbase});
 		}
 
 		if (!ethEnabled()) {
@@ -90,10 +69,8 @@
 	</script>
 </head>
 <body>
-	<button id="getme" onclick="setApoiar()">Apoiar</button>
-	<br/>
-	Valor: <input type="text" name="apoiar" id="apoiar">
-	<br/>
-	<button id="setme" onclick="getShowApoio()">Sua contribuição </button>
+	<button id="getme" onclick="getAndShowVal()">Get</button>
+	StoredData: <input type="text" name="storedData" id="storedData">
+	<button id="setme" onclick="setVal()">Set</button>
 </body>
 </html>
