--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Simple Storage</title>
+	<title>PodCash</title>
 	<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.34/dist/web3.min.js"></script>
 	<script type="text/javascript">
-		const contract_address = "0x80aec1d099A6038Cd0169625A0C6e8c2e46b68a5";
+		const contract_address = "0x5c77f68ad0d99e2d1934ba9b322c2443dfa940a7";
 
 		const contract_abi = [
-			{
-				"inputs": [],
-				"name": "get",
-				"outputs": [
-					{
-						"internalType": "uint256",
-						"name": "",
-						"type": "uint256"
-					}
-				],
-				"stateMutability": "view",
-				"type": "function"
-			},
+	{
+		"inputs": [],
+		"stateMutability": "nonpayable",
+		"type": "constructor"
+	},
+	{
+		"inputs": [],
+		"name": "apoiar",
+		"outputs": [],
+		"stateMutability": "payable",
+		"type": "function"
+	},
+			
+
 			{
 				"inputs": [
 					{
@@ -32,7 +33,22 @@
 				"outputs": [],
 				"stateMutability": "nonpayable",
 				"type": "function"
+			},
+			{
+		"inputs": [],
+		"name": "getSuaContribuicao",
+		"outputs": [
+			{
+				"internalType": "uint256",
+				"name": "",
+				"type": "uint256"
 			}
+		],
+		"stateMutability": "view",
+		"type": "function"
+	}
+		
+		
 		];
 
 		const ethEnabled = () => {
@@ -43,34 +59,41 @@
 		  }
 		  return false;
 		}
+		
+		async function setApoiar () {
+                var val = document.getElementById("apoiar").value;
+        	window.contratoPodCash.methods.apoiar().send({from:window.coinbase, to: contract_address, value: val});
+		}
 
 		async function saveCoinbase () {
 		  window.coinbase = await window.web3.eth.getCoinbase();
 		};
 
-		async function getAndShowVal () {
-		  var val = window.SimpleStorage.methods.get().call();
-			document.getElementById("storedData").value = await val;
+		async function getAndShowApoio () {
+		  var val = window.contratoPodCash.methods.apoiar().call();
+		  document.getElementById("setme").value = await val;
 		};
 
-		async function setVal () {
-			var val = document.getElementById("storedData").value;
-		  window.SimpleStorage.methods.set(val).send(val, {from:window.coinbase});
+		async function getShowContribuicao() {
+		var val = window.contratoPodCash.methods.getSuaContribuicao().call();
+		  
 		}
 
 		if (!ethEnabled()) {
 		  alert("Metamask or browser with Ethereum not detected!");
 		}
 		else {
-			window.SimpleStorage = new web3.eth.Contract(contract_abi, contract_address);
+			window.contratoPodCash = new web3.eth.Contract(contract_abi, contract_address);
 			saveCoinbase();
 		}
 
 	</script>
 </head>
 <body>
-	<button id="getme" onclick="getAndShowVal()">Get</button>
-	StoredData: <input type="text" name="storedData" id="storedData">
-	<button id="setme" onclick="setVal()">Set</button>
+	<button id="getme" onclick="setApoiar()">Apoiar</button>
+	<br/>
+	Valor: <input type="text" name="apoiar" id="apoiar">
+	<br/>
+	<button id="setme" onclick="getShowApoio()">Sua contribuição </button>
 </body>
 </html>
