--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@
 	<br/>
 	Valor: <input type="text" name="apoiar" id="apoiar">
 	<br/>
-	<button id="setme" onclick="getShowApoio()">Sua contribuição </button>
+	<button id="setme" onclick="getAndShowApoio()">Sua contribuição </button>
 </body>
 </html>
