--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 		var val=window.contratoPodCash.methods.getSuaContribuicao().call();
 			document.getElementById("cont").value = await val;
 		console.log(val);
+		document.write(val);
 		}
 
 	
