--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 	<br/>
 	Valor: <input type="text" name="cont" id="cont">
 	<br/>
-	<button id="setme" onclick="getAndShowValorArrecadado()">Total arrecadado: </button>
+	<button id="setme2" onclick="getAndShowValorArrecadado()">Total arrecadado: </button>
 	Valor: <input type="text" name="arrec" id="arrec">
 	<br/>
 </body>
