--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>PodCash</title>
 	<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.34/dist/web3.min.js"></script>
 	<script type="text/javascript">
-		const contract_address = "0x58cb59f647cc3806b7eaec632c7e14570bdac70e";
+		const contract_address = "0x0a5b5e5f6041d1d4ff7886c21ac328f4e65db50e";
 
 		const contract_abi = [
 	{
@@ -74,7 +74,7 @@
 	},
 	{
 		"inputs": [],
-		"name": "getSuaContribuisao",
+		"name": "getSuaContribuicao",
 		"outputs": [
 			{
 				"internalType": "uint256",
