--- a/index.html
+++ b/index.html
@@ -162,5 +162,7 @@
 	<br/>
 	<button id="setme3" onclick="transfereDono()">Transfere para autor </button>
 	<br/>
+	
+	<a class="download-link" download="" href="https://anchor.fm/s/910f53c/podcast/play/21746703/https%3A%2F%2Fd3ctxlq1ktw2nl.cloudfront.net%2Fstaging%2F2020-9-28%2F7bdc4a58-dd7f-423a-d4eb-d9c39515a9c9.mp3" onclick="javascript:window.open('https://anchor.fm/s/910f53c/podcast/play/21746703/https%3A%2F%2Fd3ctxlq1ktw2nl.cloudfront.net%2Fstaging%2F2020-9-28%2F7bdc4a58-dd7f-423a-d4eb-d9c39515a9c9.mp3'); return false;"><span class="mejs-offscreen">Download</span></a>
 </body>
 </html>
