--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>PodCash</title>
-	<link rel="icon" type="imagem/png" href="./img/iconPodCash.png" />
+	<link rel="icon" type="imagem/png" href="./img/iconeP.ico" />
 	<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.34/dist/web3.min.js"></script>
 	<script type="text/javascript">
 		const contract_address = "0x0a5b5e5f6041d1d4ff7886c21ac328f4e65db50e";
