--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<style>
+		body {
+  			background-color: black;
+			
+		}
+		p{
+			color:white;
+		}
+		
+	</style>
+	
 	<title>PodCash</title>
 	<link rel="icon" type="imagem/png" href="./img/iconPodCash.png" />
 	<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.34/dist/web3.min.js"></script>
@@ -150,6 +161,8 @@
 	</script>
 </head>
 <body>
+	
+	
 	<button id="getme" onclick="setApoiar()">Apoiar</button>
 	<br/>
 	Valor: <input type="text" name="apoiar" id="apoiar"> wei
