--- a/index.html
+++ b/index.html
@@ -2,13 +2,48 @@
 <html>
 <head>
 	<style>
-		body {
-  			background-color: black;
-			
-		}
-		p{
-			color:white;
-		}
+	body {
+	  font-family: 'Montserrat', Helvetica, sans-serif;
+	  display: flex;
+	  flex-direction: row;
+	  align-items: center;
+	  justify-content: center;
+	  height: 100vh;
+	}
+	p {
+	  max-width: 560px;
+	  padding-bottom: 30px;
+	  border-bottom: 1px solid #eee;
+	  margin-bottom: 30px;
+	  font-size: 18px;
+	  line-height: 2;
+	  color: #222;
+	}
+
+	.button {
+	  background: #76B3FA;
+	  border-radius: 100px;
+	  padding: 20px 60px;
+	  color: #fff;
+	  text-decoration: none;
+	  font-size: 1.45em;
+	  margin: 0 15px;
+	}
+
+	/* Hover state animation applied here */
+	.button:hover { 
+	  -webkit-animation: hover 1200ms linear 2 alternate;
+	  animation: hover 1200ms linear 2 alternate;
+	}
+
+	/* Active state animation applied here */
+	.button:active {
+	  -webkit-animation: active 1200ms ease 1 alternate;
+	  animation: active 1200ms ease 1 alternate; 
+	  background: #5F9BE0;
+	}
+	.gray { background: #D2D2D2; }
+	.gray:active { background: #b9b9b9; }
 		
 	</style>
 	
