--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	body {
 	  font-family: 'Montserrat', Helvetica, sans-serif;
 	  align-items: center;
+	  text-align:center;
 
 	}
 	p {
@@ -22,21 +23,6 @@
 	  font-size: 1.45em;
 	  margin: 0 15px;
 	}
-
-	/* Hover state animation applied here */
-	.button:hover { 
-	  -webkit-animation: hover 1200ms linear 2 alternate;
-	  animation: hover 1200ms linear 2 alternate;
-	}
-
-	/* Active state animation applied here */
-	.button:active {
-	  -webkit-animation: active 1200ms ease 1 alternate;
-	  animation: active 1200ms ease 1 alternate; 
-	  background: #5F9BE0;
-	}
-	.gray { background: #D2D2D2; }
-	.gray:active { background: #b9b9b9; }
 		
 	</style>
 	
