--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<style>
 	body {
 	  font-family: 'Montserrat', Helvetica, sans-serif;
-	  align-items: center;
 	  text-align:center;
 
 	}
@@ -15,8 +14,10 @@
 	}
 
 	button {
+	  font-family: 'Montserrat', Helvetica, sans-serif;
 	  border-radius: 20px;
-	  color: green;
+	  backgroung:blue;
+	  color: white;
 	  margin: 0 2px;
 	}
 		
