--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                 
                         </div>
                         <div class="input-group">
-                        <button class="btn btn--radius-2 btn--blue p-b-100 p-t-130" onclick="setApoiar()"> Enviar </button><br/></div>
+                        <button class="btn btn--radius-2 btn--blue p-b-100 p-t-130" type="submit" onclick="setApoiar()"> Enviar </button><br/></div>
 
                         <div class="input-group">
                         <button class="btn btn--radius-2 btn--green p-t-30 p-b-100" onclick="getAndShowApoio()"> Ver sua colaboração:</button> <br/></div>
