--- a/index.html
+++ b/index.html
@@ -166,18 +166,16 @@
 
         <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/328898312&color=%232ce3ca&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/soundsmellu" title="MELLU" target="_blank" style="color: #cccccc; text-decoration: none;">MELLU</a> · <a href="https://soundcloud.com/soundsmellu/metro-rio" title="Metrô Rio" target="_blank" style="color: #cccccc; text-decoration: none;">Metrô Rio</a></div> 
 	
+	<p>Doe uma quantia e ajude a manter o podcast:</p>
 	<p>
-	<button id="getme" onclick="setApoiar()">Apoiar</button>
+	<input type="text" name="apoiar" id="apoiar"> wei
+	<button id="getme" onclick="setApoiar()"> Enviar </button>
 	<p/>
 	<p>
-	Valor: <input type="text" name="apoiar" id="apoiar"> wei
-	<p/>
-	<p>
-	<button id="setme" onclick="getAndShowApoio()">Sua contribuição </button>
-	<p/>
-	<p>
+	<button id="setme" onclick="getAndShowApoio()">Ver sua contribuição: </button>
 	Valor: <input type="text" name="cont" id="cont"> wei
-	</p>
+	<p/>
+
 	<p>
 	<button id="setme2" onclick="getAndShowValorArrecadado()">Total arrecadado: </button>
 	Valor: <input type="text" name="arrec" id="arrec"> wei
