--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
 	<p/>
 	<p>
 	<button id="setme" onclick="getAndShowApoio()">Ver sua contribuição: </button>
-	Valor: <input type="text" name="cont" id="cont"> wei
+	<input type="text" name="cont" id="cont"> wei
 	<p/>
 
 	<p>
 	<button id="setme2" onclick="getAndShowValorArrecadado()">Total arrecadado: </button>
-	Valor: <input type="text" name="arrec" id="arrec"> wei
+	<input type="text" name="arrec" id="arrec"> wei
 	<p/>
 	<p>
 	<button id="setme3" onclick="transfereDono()">Transfere para autor </button>
