--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
+	<style>
+		body{
+			font-family: Gotham Black, Poppins, Montserrat, Helvetica, sans-serif
+		}
+	</style>
 	
 	<title>PodCash</title>
 	<link rel="icon" type="imagem/png" href="./img/iconPodCash.png" />
