--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<style>
 		body{
-			font-family: "Gotham Black", Poppins, Montserrat, Helvetica, sans-serif;
+			font-family: "Gotham Medium", Poppins, Montserrat, Helvetica, sans-serif;
 		}
 	</style>
 	
