--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 		body{
 			font-family: "Gotham Medium", Poppins, Montserrat, Helvetica, sans-serif;
 		}
+		h1{
+			font-family: "Gotham Black", Poppins, Montserrat, Helvetica, sans-serif;
+		}
+		button{
+			font-family: "Gotham Medium", Poppins, Montserrat, Helvetica, sans-serif;
+			background-color: lightblue;
+		}
+			
 	</style>
 	
 	<title>PodCash</title>
