--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			background: #87CF7B;
 			box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 			border-radius: 30px;
+			outline: none;
 			
 		}
 			
