--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		}
 		button{
 			font-family: "Gotham Medium", Poppins, Montserrat, Helvetica, sans-serif;
-			font-color:white;
+			color:white;
 			background: #87CF7B;
 			box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 			border-radius: 30px;
