--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<style>
 		body{
 			font-family: "Gotham Medium", Poppins, Montserrat, Helvetica, sans-serif;
+			margin: 20%;
 		}
 		h1{
 			font-family: "Gotham Black", Poppins, Montserrat, Helvetica, sans-serif;
@@ -14,7 +15,7 @@
 			background: #87CF7B;
 			box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 			border-radius: 30px;
-			outline: none;
+			border-color: #87CF7B;
 			
 		}
 			
