--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<style>
 		body{
 			font-family: "Gotham Medium", Poppins, Montserrat, Helvetica, sans-serif;
-			margin: 20%;
+			margin-left: 20%;
+			margin-right: 20%;
+			margin-top:5%;
 		}
 		h1{
 			font-family: "Gotham Black", Poppins, Montserrat, Helvetica, sans-serif;
