--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 			border-color: #87CF7B;
 			
 		}
+		#formulario{
+			align-content: center;
+		}
 			
 	</style>
 	
@@ -185,7 +188,7 @@
 	 <h4>Episódio Número 84</h4>
 
         <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/328898312&color=%232ce3ca&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/soundsmellu" title="MELLU" target="_blank" style="color: #cccccc; text-decoration: none;">MELLU</a> · <a href="https://soundcloud.com/soundsmellu/metro-rio" title="Metrô Rio" target="_blank" style="color: #cccccc; text-decoration: none;">Metrô Rio</a></div> 
-	
+	<div id="formulario">
 	<p>Doe uma quantia e ajude a manter o podcast:</p>
 	<p>
 	<input type="text" name="apoiar" id="apoiar"> wei
@@ -203,6 +206,7 @@
 	<p>
 	<button id="setme3" onclick="transfereDono()">Transfere para autor </button>
 	<p/>
+	</div>
 	
 
 </body>
