--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<style>
-		body{
+		body{	
+			background:#323232;
+			color:white;
 			font-family: "Gotham Medium", Poppins, Montserrat, Helvetica, sans-serif;
 			margin-left: 20%;
 			margin-right: 20%;
