--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
 </head>
 <body>
 	
-	<h1>PODCASH</h1>
+	
+	<img src="./img/PodCashlogo.png" width="500">
 	<h2>Resumido</h2>
 	<h3>por Bruno Natal</h3>
 	<p>
