--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 <body>
 	
 	
-	<img src="./img/PodCashlogo.png" width="200">
+	<img src="./img/PodCashlogo.png" height="150" width="500">
 	<h2>Resumido</h2>
 	<h3>por Bruno Natal</h3>
 	<p>
