--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<style>
 		body{	
-			background:#323232;
+			background:#1D1D1D;
 			color:white;
 			font-family: "Gotham Medium", Poppins, Montserrat, Helvetica, sans-serif;
 			margin-left: 20%;
